import getSCFromTypography from '../getSCFromTypography';
import '@wordpress/block-editor';

describe('getSCFromTypography', () => {
	it('Returns a SC object', () => {
		const typographyObj = {
			'p-font-family-xxl': 'Roboto',
			'p-font-family-general': 'Roboto',
			'p-font-size-xxl': 20,
			'p-font-size-unit-xxl': 'px',
			'p-font-size-xl': 16,
			'p-font-size-unit-xl': 'px',
			'p-font-size-unit-general': 'px',
			'p-line-height-xxl': 1.5,
			'p-line-height-xl': 418.27,
			'p-line-height-l': 1.625,
			'p-font-weight-xxl': 400,
			'p-letter-spacing-xxl': '0',
			'p-letter-spacing-unit-xxl': 'px',
			'p-letter-spacing-xl': '0',
			'p-letter-spacing-general': 0,
			'p-letter-spacing-unit-general': 'px',
			'p-text-transform-general': 'none',
			'p-font-style-general': 'normal',
			'p-text-decoration-general': 'unset',
		};
		const styleCards = {
			name: 'Maxi (Default)',
			status: 'active',
			styleCard: {
				dark: {},
				light: {},
			},
			styleCardDefaults: {
				dark: {},
				light: {
					'color-1': '#ffffff',
					'color-2': '#f2f9fd',
					'color-3': '#9b9b9b',
					'color-4': '#ff4a17',
					'color-5': '#000000',
					'color-6': '#c9340a',
					'color-7': '#081219',
					'p-font-family-general': 'Roboto',
					'p-font-size-general': '16px',
					'p-font-size-xxl': '20px',
					'p-font-size-xl': '16px',
					'p-font-size-l': '16px',
					'p-font-size-m': '16px',
					'p-font-size-s': '16px',
					'p-font-size-xs': '16px',
					'p-line-height-xxl': 1.5,
					'p-line-height-xl': 1.625,
					'p-line-height-l': 1.625,
					'p-line-height-m': 1.625,
					'p-line-height-s': 1.625,
					'p-line-height-xs': 1.625,
					'p-font-weight-general': 400,
					'p-letter-spacing-general': '0px',
					'p-text-transform-general': 'none',
					'p-font-style-general': 'normal',
					'p-text-decoration-general': 'unset',
				},
			},
		};
		const SCStyle = 'light';

		const result = getSCFromTypography(styleCards, SCStyle, typographyObj);

		expect(result).toMatchSnapshot();
	});
	it('Returns a SC object using others responsive stage unit for `font-size`', () => {
		const typographyObj = {
			'p-font-family-xxl': 'Roboto',
			'p-font-family-general': 'Roboto',
			'p-font-size-xxl': 20,
			'p-font-size-unit-xxl': 'px',
			'p-font-size-xl': 16,
			'p-font-size-unit-xl': 'px',
			'p-font-size-s': 42,
			'p-font-size-unit-general': 'px',
			'p-line-height-xxl': 1.5,
			'p-line-height-xl': 418.27,
			'p-line-height-l': 1.625,
			'p-font-weight-xxl': 400,
			'p-letter-spacing-xxl': '0',
			'p-letter-spacing-unit-xxl': 'px',
			'p-letter-spacing-xl': '0',
			'p-letter-spacing-general': 0,
			'p-letter-spacing-unit-general': 'px',
			'p-text-transform-general': 'none',
			'p-font-style-general': 'normal',
			'p-text-decoration-general': 'unset',
		};
		const styleCards = {
			name: 'Maxi (Default)',
			status: 'active',
			styleCard: {
				dark: {},
				light: {},
			},
			styleCardDefaults: {
				dark: {},
				light: {
					'color-1': '#ffffff',
					'color-2': '#f2f9fd',
					'color-3': '#9b9b9b',
					'color-4': '#ff4a17',
					'color-5': '#000000',
					'color-6': '#c9340a',
					'color-7': '#081219',
					'p-font-family-general': 'Roboto',
					'p-font-size-general': '16px',
					'p-font-size-xxl': '20px',
					'p-font-size-xl': '16px',
					'p-font-size-l': '16px',
					'p-font-size-m': '16px',
					'p-font-size-s': '16px',
					'p-font-size-xs': '16px',
					'p-line-height-xxl': 1.5,
					'p-line-height-xl': 1.625,
					'p-line-height-l': 1.625,
					'p-line-height-m': 1.625,
					'p-line-height-s': 1.625,
					'p-line-height-xs': 1.625,
					'p-font-weight-general': 400,
					'p-letter-spacing-general': '0px',
					'p-text-transform-general': 'none',
					'p-font-style-general': 'normal',
					'p-text-decoration-general': 'unset',
				},
			},
		};
		const SCStyle = 'light';

		const result = getSCFromTypography(styleCards, SCStyle, typographyObj);

		expect(result).toMatchSnapshot();
	});
	it('Returns a SC object using decimal number for `letter-spacing`', () => {
		const typographyObj = {
			'p-font-family-xxl': 'Roboto',
			'p-font-family-general': 'Roboto',
			'p-font-size-xxl': 20,
			'p-font-size-unit-xxl': 'px',
			'p-font-size-xl': 16,
			'p-font-size-unit-xl': 'px',
			'p-font-size-s': 42,
			'p-font-size-unit-general': 'px',
			'p-line-height-xxl': 1.5,
			'p-line-height-xl': 418.27,
			'p-line-height-l': 1.625,
			'p-font-weight-xxl': 400,
			'p-letter-spacing-xxl': '0',
			'p-letter-spacing-unit-xxl': 'px',
			'p-letter-spacing-xl': '0',
			'p-letter-spacing-general': 19.2,
			'p-letter-spacing-unit-general': 'px',
			'p-text-transform-general': 'none',
			'p-font-style-general': 'normal',
			'p-text-decoration-general': 'unset',
		};
		const styleCards = {
			name: 'Maxi (Default)',
			status: 'active',
			styleCard: {
				dark: {},
				light: {},
			},
			styleCardDefaults: {
				dark: {},
				light: {
					'color-1': '#ffffff',
					'color-2': '#f2f9fd',
					'color-3': '#9b9b9b',
					'color-4': '#ff4a17',
					'color-5': '#000000',
					'color-6': '#c9340a',
					'color-7': '#081219',
					'p-font-family-general': 'Roboto',
					'p-font-size-general': '16px',
					'p-font-size-xxl': '20px',
					'p-font-size-xl': '16px',
					'p-font-size-l': '16px',
					'p-font-size-m': '16px',
					'p-font-size-s': '16px',
					'p-font-size-xs': '16px',
					'p-line-height-xxl': 1.5,
					'p-line-height-xl': 1.625,
					'p-line-height-l': 1.625,
					'p-line-height-m': 1.625,
					'p-line-height-s': 1.625,
					'p-line-height-xs': 1.625,
					'p-font-weight-general': 400,
					'p-letter-spacing-general': '0px',
					'p-text-transform-general': 'none',
					'p-font-style-general': 'normal',
					'p-text-decoration-general': 'unset',
				},
			},
		};
		const SCStyle = 'light';

		const result = getSCFromTypography(styleCards, SCStyle, typographyObj);

		expect(result).toMatchSnapshot();
	});
	it('Returns a SC object keeping global values', () => {
		const typographyObj = {
			'button-color': 'rgba(14,34,234,1)',
			'button-color-global': true,
			'button-font-family-general': 'Roboto',
			'button-font-size-xxl': 22,
			'button-font-size-unit-xxl': 'px',
			'button-font-size-xl': 18,
			'button-font-size-unit-xl': 'px',
			'button-font-size-l': 16,
			'button-font-size-unit-l': 'px',
			'button-line-height-xxl': '1.5',
			'button-line-height-xl': '1.625',
			'button-font-weight-general': '500',
			'button-text-transform-general': 'none',
			'button-font-style-general': 'normal',
			'button-letter-spacing-xxl': 0,
			'button-letter-spacing-unit-xxl': 'px',
			'button-text-decoration-general': 'unset',
			'button-background-color-global': true,
			'button-background-color': 'rgba(23,255,25,1)',
		};
		const styleCards = {
			name: 'Maxi (Default)',
			status: 'active',
			styleCard: {
				dark: {},
				light: {
					'button-color-global': true,
					'button-color': 'rgba(14,34,234,1)',
					'button-background-color-global': true,
					'button-background-color': 'rgba(23,255,25,1)',
					'button-font-family-general': 'Roboto',
					'button-font-size-xxl': '22px',
					'button-font-size-xl': '18px',
					'button-font-size-l': '16px',
					'button-line-height-xxl': '1.5',
					'button-line-height-xl': '1.625',
					'button-font-weight-general': '700',
					'button-text-transform-general': 'none',
					'button-font-style-general': 'normal',
					'button-letter-spacing-xxl': '0px',
					'button-text-decoration-general': 'unset',
				},
			},
			styleCardDefaults: {
				dark: {},
				light: {
					'color-1': '#ffffff',
					'color-2': '#f2f9fd',
					'color-3': '#9b9b9b',
					'color-4': '#ff4a17',
					'color-5': '#000000',
					'color-6': '#c9340a',
					'color-7': '#081219',
					'p-color': '',
					'p-color-global': false,
					'h1-color': '',
					'h1-color-global': false,
					'h2-color': '',
					'h2-color-global': false,
					'h3-color': '',
					'h3-color-global': false,
					'h4-color': '',
					'h4-color-global': false,
					'h5-color': '',
					'h5-color-global': false,
					'h6-color': '',
					'h6-color-global': false,
					'button-color': '',
					'button-color-global': false,
					'divider-color': '',
					'divider-color-global': false,
					'p-font-family-general': 'Roboto',
					'p-font-size-xxl': '20px',
					'p-font-size-xl': '16px',
					'p-line-height-xxl': 1.5,
					'p-line-height-xl': 1.625,
					'p-font-weight-general': '400',
					'p-text-transform-general': 'none',
					'p-font-style-general': 'normal',
					'p-letter-spacing-xxl': '0px',
					'p-text-decoration-general': 'unset',
					'button-font-family-general': 'Roboto',
					'button-font-size-xxl': '22px',
					'button-font-size-xl': '18px',
					'button-font-size-l': '16px',
					'button-line-height-xxl': 1.5,
					'button-line-height-xl': 1.625,
					'button-font-weight-general': '400',
					'button-text-transform-general': 'none',
					'button-font-style-general': 'normal',
					'button-letter-spacing-xxl': '0px',
					'button-text-decoration-general': 'unset',
					'button-background-color-global': false,
					'button-background-color': '',
					'h1-font-family-general': 'Roboto',
					'h1-font-size-xxl': '50px',
					'h1-font-size-xl': '45px',
					'h1-font-size-l': '40px',
					'h1-font-size-m': '36px',
					'h1-font-size-s': '34px',
					'h1-font-size-xs': '32px',
					'h1-line-height-xxl': 1.18,
					'h1-line-height-xl': 1.1,
					'h1-line-height-l': 1.22,
					'h1-line-height-m': 1.27,
					'h1-font-weight-general': '500',
					'h1-text-transform-general': 'none',
					'h1-font-style-general': 'normal',
					'h1-letter-spacing-xxl': '0px',
					'h1-text-decoration-general': 'unset',
					'h2-font-family-general': 'Roboto',
					'h2-font-size-xxl': '44px',
					'h2-font-size-xl': '38px',
					'h2-font-size-l': '36px',
					'h2-font-size-m': '32px',
					'h2-font-size-s': '30px',
					'h2-font-size-xs': '28px',
					'h2-line-height-xxl': 1.21,
					'h2-line-height-xl': 1.05,
					'h2-line-height-l': 1.26,
					'h2-line-height-m': 1.33,
					'h2-font-weight-general': '500',
					'h2-text-transform-general': 'none',
					'h2-font-style-general': 'normal',
					'h2-letter-spacing-xxl': '0px',
					'h2-text-decoration-general': 'unset',
					'h3-font-family-general': 'Roboto',
					'h3-font-size-xxl': '34px',
					'h3-font-size-xl': '30px',
					'h3-font-size-l': '30px',
					'h3-font-size-m': '26px',
					'h3-font-size-s': '24px',
					'h3-line-height-xxl': 1.25,
					'h3-line-height-xl': 1.3,
					'h3-line-height-l': 1.23,
					'h3-line-height-m': 1.16,
					'h3-font-weight-general': '500',
					'h3-text-transform-general': 'none',
					'h3-font-style-general': 'normal',
					'h3-letter-spacing-xxl': '0px',
					'h3-text-decoration-general': 'unset',
					'h4-font-family-general': 'Roboto',
					'h4-font-size-xxl': '30px',
					'h4-font-size-xl': '26px',
					'h4-font-size-l': '24px',
					'h4-font-size-s': '22px',
					'h4-line-height-xxl': 1.33,
					'h4-line-height-xl': 1.24,
					'h4-line-height-l': 1.38,
					'h4-line-height-m': 1.42,
					'h4-font-weight-general': '500',
					'h4-text-transform-general': 'none',
					'h4-font-style-general': 'normal',
					'h4-letter-spacing-xxl': '0px',
					'h4-text-decoration-general': 'unset',
					'h5-font-family-general': 'Roboto',
					'h5-font-size-xxl': '28px',
					'h5-font-size-xl': '22px',
					'h5-font-size-m': '20px',
					'h5-line-height-xxl': 1.36,
					'h5-line-height-xl': 1.26,
					'h5-line-height-l': 1.45,
					'h5-line-height-m': 1.5,
					'h5-font-weight-general': '500',
					'h5-text-transform-general': 'none',
					'h5-font-style-general': 'normal',
					'h5-letter-spacing-xxl': '0px',
					'h5-text-decoration-general': 'unset',
					'h6-font-family-general': 'Roboto',
					'h6-font-size-xxl': '24px',
					'h6-font-size-xl': '20px',
					'h6-font-size-m': '18px',
					'h6-line-height-xxl': 1.39,
					'h6-line-height-xl': 1.29,
					'h6-line-height-l': 1.5,
					'h6-line-height-m': 1.56,
					'h6-font-weight-general': '500',
					'h6-text-transform-general': 'none',
					'h6-font-style-general': 'normal',
					'h6-letter-spacing-xxl': '0px',
					'h6-text-decoration-general': 'unset',
					'font-icon-font-size-general': '30px',
				},
			},
		};
		const SCStyle = 'light';

		const result = getSCFromTypography(styleCards, SCStyle, typographyObj);

		expect(result).toMatchSnapshot();
	});
});
