// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSCFromTypography Returns a SC object 1`] = `
Object {
  "p-font-family-general": "Roboto",
  "p-font-family-xxl": "Roboto",
  "p-font-size-xl": "16px",
  "p-font-size-xxl": "20px",
  "p-font-style-general": "normal",
  "p-font-weight-xxl": 400,
  "p-letter-spacing-general": "0px",
  "p-letter-spacing-xl": "0px",
  "p-letter-spacing-xxl": "0px",
  "p-line-height-l": "1.625",
  "p-line-height-xl": "418.27",
  "p-line-height-xxl": "1.5",
  "p-text-decoration-general": "unset",
  "p-text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object keeping global values 1`] = `
Object {
  "button-background-color": "rgba(23,255,25,1)",
  "button-background-color-global": true,
  "button-color": "rgba(14,34,234,1)",
  "button-color-global": true,
  "button-font-family-general": "Roboto",
  "button-font-size-l": "16px",
  "button-font-size-xl": "18px",
  "button-font-size-xxl": "22px",
  "button-font-style-general": "normal",
  "button-font-weight-general": "500",
  "button-letter-spacing-xxl": "0px",
  "button-line-height-xl": "1.625",
  "button-line-height-xxl": "1.5",
  "button-text-decoration-general": "unset",
  "button-text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object using decimal number for \`letter-spacing\` 1`] = `
Object {
  "p-font-family-general": "Roboto",
  "p-font-family-xxl": "Roboto",
  "p-font-size-s": "42px",
  "p-font-size-xl": "16px",
  "p-font-size-xxl": "20px",
  "p-font-style-general": "normal",
  "p-font-weight-xxl": 400,
  "p-letter-spacing-general": "19.2px",
  "p-letter-spacing-xl": "0px",
  "p-letter-spacing-xxl": "0px",
  "p-line-height-l": "1.625",
  "p-line-height-xl": "418.27",
  "p-line-height-xxl": "1.5",
  "p-text-decoration-general": "unset",
  "p-text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object using others responsive stage unit for \`font-size\` 1`] = `
Object {
  "p-font-family-general": "Roboto",
  "p-font-family-xxl": "Roboto",
  "p-font-size-s": "42px",
  "p-font-size-xl": "16px",
  "p-font-size-xxl": "20px",
  "p-font-style-general": "normal",
  "p-font-weight-xxl": 400,
  "p-letter-spacing-general": "0px",
  "p-letter-spacing-xl": "0px",
  "p-letter-spacing-xxl": "0px",
  "p-line-height-l": "1.625",
  "p-line-height-xl": "418.27",
  "p-line-height-xxl": "1.5",
  "p-text-decoration-general": "unset",
  "p-text-transform-general": "none",
}
`;
